manual cleanup for one case study

--- a/en/case-studies/detail/766/index.html
+++ b/en/case-studies/detail/766/index.html
@@ -19,9 +19,9 @@
 				$("ul.hideme3").slideToggle("slow");
 			});
   				$("a.expose3").toggle(function(){
-						$("a.expose3").html('<img src="/public/images/plan_collapse.gif" width="12" height="11" alt="Collapse" />');
+						$("a.expose3").html('<img src="https://toolsofchange.com/public/images/plan_collapse.gif" width="12" height="11" alt="Collapse" />');
 							},function(){
-						$("a.expose3").html('<img src="/public/images/plan_expand.gif" width="12" height="11" alt="Expand" />');
+						$("a.expose3").html('<img src="https://toolsofchange.com/public/images/plan_expand.gif" width="12" height="11" alt="Expand" />');
 						});
 
 		    $('p.alert').fadeOut(3500).slideUp("fast");
@@ -83,47 +83,16 @@ theForm.elements[i].checked = status;
 
 	<div id="headwrap">
 					<div id="header">
-					<h1 id="logo" style="	background:transparent url(/public/images/logo_en.gif) no-repeat 0 0;">
+					<h1 id="logo" style="	background:transparent url(https://toolsofchange.com/public/images/logo_en.gif) no-repeat 0 0;">
 
 					<a href="/en/home/" title="Tools of Change - Home">Tools- of Change</a>s
 
 					</h1>
 
-						<div id="qnav">
-					<ul id="quicknav">
-					<li><a href="#">Welcome, Guest</a></li>
-					<li><a href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" class="thickbox" title="Please Log In">Login</a></li>
-					<li><a href="http://toolsofchange.com/en/user/create">Register</a></li>
-					<li class="last_nav"><a href="/fr/accueil/" class="" title="left=-rgt=">Fran&ccedil;ais</a></li>
-					</ul></div><!--/qnav-->
-
-
 					</div><!--/header-->
 	</div><!--/headwrap-->
 
 
-		<div id="nav_container">
-			<div id="nav">
-				<ul>
-	<li><a href="/en/planning-guide/" id="hb_2" class="menu_class">Planning Guide</a>
-	</li>
-<li><a href="/en/tools-of-change/" id="hb_3" class="menu_class">Tools of Change</a>
-	</li>
-<li><a href="/en/case-studies/" id="hb_4" class="menu_class_current">Case Studies</a>
-	</li>
-<li><a href="/en/topic-resources/" id="hb_5" class="menu_class">Topic Resources</a>
-	</li>
-<li><a href="/en/workshops/" id="hb_6" class="menu_class">Webinars &amp; Workshops</a>
-	</li>
-<li><a href="/en/about-us/" id="hb_7" class="menu_class">About Us</a>
-	</li>
-</ul>
-
-
-
-
-			</div> <!-- end #nav -->
-		</div> <!-- end #nav_container -->
 
 
    <div id="content_cap"></div>
@@ -139,7 +108,6 @@ theForm.elements[i].checked = status;
         <div class="case_study_sidebar_cap"></div>
 
         <div class="case_study_sidebar_body">
-          <p><a href="/en/topic-resources/"><img src="/public/images/topic_ad.gif" alt="Topic Resources" width="182" height="107" class="topic_ad" /> </a> </p>
           <h5>Tools Used</h5>
           <ul>
 
@@ -649,7 +617,7 @@ theForm.elements[i].checked = status;
           <table class="search_sidebar_styles">
             <tr>
               <td class="text_area"><input name="search_phrase" type="text" value= "Search"  size="16" onclick="this.value='';" onfocus="this.select()" onblur="this.value=!this.value?'Search':this.value;" /></td>
-              <td class="go_area"><input src="/public/images/go_button_yellow.gif" value="Search" type="image" /></td>
+              <td class="go_area"><input src="https://toolsofchange.com/public/images/go_button_yellow.gif" value="Search" type="image" /></td>
             </tr>
           </table>
         </form>
@@ -659,20 +627,7 @@ theForm.elements[i].checked = status;
       <!--/news_body-->
       <div class="advanced_side_cap_bottom"></div>
 
-					 <div class="intro_cap_top"></div>
-
-       <div class="sidebar_body">
-      <ul>
-									<li id="my_account_sidebar"><a href="/app/views/login/form_thick_reg.lasso?height=270&amp;width=340&amp;modal=true" class="thickbox" title="Please Log In">Please Log In</a></li>
-									<li id="help_sidebar"><a href="/en/help/">Help</a></li>
-									<li id="tou_sidebar"  class="last_nav"><a href="/en/terms/">Terms of Use</a></li></ul>
-
-
-
-       </div>
-
-
-					 <div class="intro_cap_bottom"></div>	<!--
+	<!--
            <div class="news_cap_top"></div>
 				 <div class="news_body">[Select: $STK_langlink][Case:'fr']	<p>Joignez-vous à notre liste de diffusion:</p>[Case:'en']<p>Join our mailing list:</p>[/Select]
 
@@ -681,7 +636,7 @@ theForm.elements[i].checked = status;
 							<table width="200" border="0">
 								<tr>
 									<td class="text_area"><input name="email_user" type="text" id="Search" value="" size="16" /></td>
-									<td class="go_area"><input src="/public/images/go_button.gif" id="submit3" value="Search" type="image" /></td>
+									<td class="go_area"><input src="https://toolsofchange.com/public/images/go_button.gif" id="submit3" value="Search" type="image" /></td>
 								</tr>
 							</table>
 						</form>
@@ -689,15 +644,6 @@ theForm.elements[i].checked = status;
       <div class="news_cap_bottom"></div> -->
 
 
-								  		      <div class="sponsor_box">
-								   <p class="sponsor_text">This site is brought to you through <br />
-								     the vision and generosity of:</p>
-
-								   <p class="sponsor_header">Primary Sponsors</p>
-								   <a href="/en/case-studies"><img src="/public/images/sponsors_primary.gif" alt="Primary sponsors" width="199" height="50" class="sponsor_ads" /></a>
-								   <p class="sponsor_header">Supporting Sponsors</p>
-								   <a href="/en/case-studies"><img src="/public/images/supporting_sponsors.gif" alt="Supporting sponsors" width="199" height="53" class="sponsor_ads2" /></a>
-							      </div>
 
 
 
@@ -709,26 +655,7 @@ theForm.elements[i].checked = status;
  <div id="content_btm_cap"></div>
 
   <div id="footer">
-    <div class="footer_left">
-
       <p>&copy; 1996-2024 Copyright Jay Kassirer. All rights reserved. No part of this work may be reproduced or used in any means without prior permission of the author. Please <a style="text_decoration:underline" href="mailto:tools@cullbridge.com">contact me</a>. I will usually give permission for credited uses with links</p>
-
-    </div>
-    <!--/footer_left-->
-    <div class="footer_right">
-      <ul>
-
-        <li><a href="/en/planning-guide/advanced-search/">Search</a></li>
-        <li><a href="/en/help/">Help</a></li>
-        <li><a href="/en/terms/">Terms of Use</a></li>
-
-        <li><a href="/app/views/login/form_thick_reg.lasso?height=270&width=340&modal=true" class="thickbox">My Account</a></li>
-
-        <li class="lastnav"><a href="/en/contact-us/">Contact Us</a></li>
-
-      </ul>
-    </div>
-    <!--/footer_right-->
   </div>
   <!--/footer-->
 </div>
