--- a/en/case-studies/index.html
+++ b/en/case-studies/index.html
@@ -83,7 +83,11 @@ theForm.elements[i].checked = status;
 <!--/qnav-->
 </div><!--/header-->
 </div><!--/headwrap-->
- <!-- end #nav_container -->
+<div id="nav_container">
+<div id="nav">
+<ul>  <li><a class="menu_class" href="../../en/tools-of-change/" id="hb_3">Tools of Change</a> </li> <li><a class="menu_class_current" href="./" id="hb_4">Case Studies</a> </li> <li><a class="menu_class" href="../../en/topic-resources/" id="hb_5">Topic Resources</a> </li> <li><a class="menu_class" href="../../en/workshops/" id="hb_6">Webinars &amp; Workshops</a> </li> <li><a class="menu_class" href="../../en/about-us/" id="hb_7">About Us</a> </li> </ul>
+</div> <!-- end #nav -->
+</div> <!-- end #nav_container -->
 <div id="content_cap"></div>
 <div id="content_wrap">
 <div class="left_wrap">
@@ -1505,7 +1509,15 @@ mso-bidi-font-family:"Times New Roman";}
 <p>© 1996-2024 Copyright Jay Kassirer. All rights reserved. No part of this work may be reproduced or used in any means without prior permission of the author. Please <a href="mailto:tools@cullbridge.com" style="text_decoration:underline">contact me</a>. I will usually give permission for credited uses with links</p>
 </div>
 <!--/footer_left-->
+<div class="footer_right">
+<ul>
 
+<li><a href="../../en/help/">Help</a></li>
+<li><a href="../../en/terms/">Terms of Use</a></li>
+
+<li class="lastnav"><a href="../../en/contact-us/">Contact Us</a></li>
+</ul>
+</div>
 <!--/footer_right-->
 </div>
 <!--/footer-->
