--- a/en/home/index.html
+++ b/en/home/index.html
@@ -77,7 +77,7 @@ theForm.elements[i].checked = status;
 <div id="headwrap">
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../public/images/logo_en.gif) no-repeat 0 0;">
-<a href="../../en/case-studies/" title="Tools of Change - Home">Tools- of Change</a>s
+<a href="../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
 					
 					</h1>
 <!--/qnav-->
